# cpp

./: .gitignore  README.md
FundamentalShapes/: CMakeLists.txt  main.cpp
OpenGL/XCad/: main.cpp
OpenGL/XCad/Assets/: CMakeLists.txt
QT/Widget/LoginPage/: mainwindow.cpp  mainwindow.ui
QT/Widget/LoginPage/build-LoginPage-Qt_6_5_0_for_macOS-Debug/: Makefile
QT/Widget/LoginPage/build-LoginPage-Qt_6_5_0_for_macOS-Debug/.qtc_clangd/.cache/clangd/index/: limits.h.936FAC89EC2DCCF5.idx  main.cpp.9B528E54A8A47D6F.idx  q20memory.h.73CEFFEAD041E092.idx  qanystringview.h.0722043EFD8CE556.idx  qapplication.h.F5788D1C9DFBC1F8.idx  qassert.h.FBE4CEC9B9F90F80.idx  qatomic_cxx11.h.42FA5B12A4262FED.idx  qbytearrayalgorithms.h.2BBD240165AF142A.idx  qbytearrayview.h.894F69E162A88D52.idx  qcolor.h.28FBE89DEC44F84A.idx  qcompare_impl.h.3D7B04CCA46CEC31.idx  qcompilerdetection.h.A924F245C53380B1.idx  qconstructormacros.h.C643258B39C33434.idx  qcontainerfwd.h.DC12C1FFB85D12AB.idx  qcontainerinfo.h.F9F3FFAF8F5CEB1A.idx  qcoreapplication_platform.h.A48BA1AB081C722F.idx  qcoreevent.h.5D90A885D3CD494C.idx  qcursor.h.C721F375E4E920C3.idx  qdatastream.h.72AC20382E6CF7A1.idx  qforeach.h.FE26F867AD5CF3B2.idx  qgenericatomic.h.EB9F02F2674ABED3.idx  qguiapplication.h.112477501698E4E3.idx  qinputmethod.h.BFAD83FE9EDE0CB1.idx  qmalloc.h.8B6624AA6031C909.idx  qobject.h.6B1CEF8ABD6AEA8C.idx  qobjectdefs.h.0108E73CC2254049.idx  qobjectdefs.h.AD343029247165E1.idx  qscopedpointer.h.1055F9A858EEA4AE.idx  qsharedpointer_impl.h.35F8856F796668E2.idx  qsize.h.32DDFB19E0856EBC.idx  qstringtokenizer.h.8F3AF64766FF5E5D.idx  qtabwidget.h.B35BEB408B80BB33.idx  qtgui-config.h.E6FA6B8811AD3EFB.idx  qtypes.h.E68E3FCCAA1B62FC.idx  qutf8stringview.h.6D29F66F61F66763.idx  qvariant.h.72736FD2A8642CDD.idx  qwidget.h.09EA87C5F6649BDF.idx  qwindowdefs.h.2D6AC5CF9A5392DF.idx  stdbool.h.3DC9D62DD3DD9B3B.idx  (+1 more)
QT/Widget/Notepad/build-Notepad-Qt_6_5_0_for_macOS-Debug/: moc_mainwindow.cpp  ui_mainwindow.h
QT/Widget/Notepad/build-Notepad-Qt_6_5_0_for_macOS-Debug/.qtc_clangd/: compile_commands.json
SDL/BugHead/: CMakeLists.txt  main.cpp
SFML/Animation/: CMakeLists.txt
XCad/Assets/include/: IconOfApplication.h
XCad/Assets/source/: IconOfApplication.cpp
opengl/x-cad/: CMakeLists.txt
qt/widget/login-page/: mainwindow.h
qt/widget/login-page/build-LoginPage-Qt_6_5_0_for_macOS-Debug/: moc_mainwindow.cpp  ui_mainwindow.h
qt/widget/login-page/build-LoginPage-Qt_6_5_0_for_macOS-Debug/.qtc_clangd/: compile_commands.json
qt/widget/notepad/: mainwindow.cpp  mainwindow.h  mainwindow.ui
qt/widget/notepad/build-Notepad-Qt_6_5_0_for_macOS-Debug/: Makefile  qrc_Resources.cpp
sfml/animation/: CMakeLists.txt  main.cpp
sfml/animation/character-animation/: CMakeLists.txt
sfml/animation/character-animation/include/: character-animation.h
sfml/animation/character-animation/src/: character-animation.cpp
vcpkg-configuration/: CMakeLists.txt  main.cpp
(+182 files in other folders)
